adding inventory manager picture to projects section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- slider start -->
         <div id="home" class="slider-area hero youtube-bg cover" data-overlay="5" style="background-image: url(img/keyboard.jpg)">
             <div class="home-arrow">
-                <a href="#about" class="smoth-scroll">
+                <a href="#work" class="smoth-scroll">
                     <i class="fa fa-angle-double-down"></i>
                 </a>
             </div>
@@ -144,6 +144,54 @@
                     </div>
                 </div>
                 <div class="row grid">
+                   
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
+                                <img src="img/grace-hopper1.png" alt="">
+                            </div>
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
+                                <h3>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">Grace Hopper</a>
+                                </h3>
+                                <span>An event page that helps to find professional networking events for women in tech</span>
+                            </div>
+                        </div>
+                        <!-- Modal content start -->
+                        <div class="modal fade" id="popup-modal5" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="view-project">
+                                        <div class="project-media" style="background-image:url(img/portfolio/port5.jpg)"></div>
+                                        <div class="view-project-content pt-10">
+                                            <div class="modal-title">
+                                                <h2>Redesign Work</h2>
+
+                                            </div>
+                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+                                                pain was born and I will give you a complete account of the system, and expound the
+                                                actual teachings of the great explorer of the truth, the master-builder of human
+                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <ul class="project-info-list">
+                                                <li class="text-uppercase">
+                                                    <span>Client</span>Jon Morikas</li>
+                                                <li class="text-uppercase">
+                                                    <span>Industry</span>Adventure / Travel</li>
+                                                <li class="text-uppercase">
+                                                    <span>Services</span>Design, Art Direction, Website</li>
+                                                <li class="text-uppercase">
+                                                    <span>Website</span>
+                                                    <a href="#">www.project.com</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal content end -->
+                    </div>
+
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
@@ -194,56 +242,11 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
-                                <img src="img/grace-hopper1.png" alt="">
-                            </div>
-                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
-                                <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">Grace Hopper</a>
-                                </h3>
-                                <span>An event page that helps to find professional networking events for women in tech</span>
-                            </div>
-                        </div>
-                        <!-- Modal content start -->
-                        <div class="modal fade" id="popup-modal5" tabindex="-1" role="dialog" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port5.jpg)"></div>
-                                        <div class="view-project-content pt-10">
-                                            <div class="modal-title">
-                                                <h2>Redesign Work</h2>
 
-                                            </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
-                                            <ul class="project-info-list">
-                                                <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
-                                                <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
-                                                <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Modal content end -->
-                    </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".7s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
-                                <img src="img/inventory.png" alt="">
+                                <img src="img/inventory_manager.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal7">
                                 <h3>
@@ -670,12 +673,12 @@
                             </div>
                         </div> -->
                     <!-- </div> -->
-                    <div class="col-md-6  mb-50">
+                    <!-- <div class="col-md-6  mb-50">
                         <div class="service-box wow fadeIn" data-wow-delay=".5s">
                             <div class="service-icon">
                                 <h4>CSS</h4>
-                                <!-- <img src=".//img/skills icons/css3.png" alt="CSS"> -->
-                                <!-- <span class="icon icon-MusicMixer"></span> -->
+                                <img src=".//img/skills icons/css3.png" alt="CSS">
+                                <span class="icon icon-MusicMixer"></span>
                             </div>
                             <div class="service-content">
                                 <h3>Web Development</h3>
@@ -731,7 +734,7 @@
                                     our long-term, highly trusted professional partner ethos and above all</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
