fixing route for inventory-manager-cms subdomain

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="portfolio-menu mb-40 text-center">
                             <button class="active" data-filter="*">ALL</button>
                             <button data-filter=".cat1">Web Apps</button>
-                            <!-- <button data-filter=".cat2">Graphic Design</button> -->
+                            <button data-filter=".cat2">Graphic Design</button>
                             <button data-filter=".cat3">Design</button>
                             <button data-filter=".cat4">Logo</button>
                         </div>
@@ -228,7 +228,7 @@
                                                     <span>Services</span>Design, Art Direction, Website</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a target="_blank" href="www.mypocketcards.com">www.mypocketcards.com</a>
+                                                    <a target="_blank" href="http://www.mypocketcards.com">www.mypocketcards.com</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
@@ -279,7 +279,7 @@
                                                     <span>Services</span>Design, Art Direction, Website</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a target="_blank" href="brandontravispark.com/inventory-manager-cms">www.brandontravispark.com/inventory-manager-cms</a>
+                                                    <a target="_blank" href="/inventory-manager-cms">www.brandontravispark.com/inventory-manager-cms</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
