--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="portfolio-menu mb-40 text-center">
-                            <button class="active" data-filter="*">ALL</button>
-                            <button data-filter=".cat1">Web Apps</button>
+                            <!-- <button class="active" data-filter="*">ALL</button> -->
+                            <button class = "active" data-filter=".cat1">Web Apps</button>
                             <button data-filter=".cat2">Graphic Design</button>
-                            <button data-filter=".cat3">Design</button>
+                            <!-- <button data-filter=".cat3">Design</button> -->
                             <button data-filter=".cat4">Logo</button>
                         </div>
                     </div>
                 </div>
                 <div class="row grid">
                    
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/grace-hopper1.png" alt="">
@@ -192,7 +192,7 @@
                         <!-- Modal content end -->
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/pocketcards1.png" alt="">
@@ -243,8 +243,8 @@
                         <!-- Modal content end -->
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".7s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
                                 <img src="img/inventory_manager.png" alt="">
                             </div>
@@ -293,14 +293,14 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat2">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".9s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal8">
-                                <img src="img/portfolio/port8.jpg" alt="">
+                                <img src="img/risebar.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal8">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal8">Creative Shop Work</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal8">Rise Bar</a>
                                 </h3>
                                 <span>Fashion, Web</span>
                             </div>
@@ -339,14 +339,14 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.1s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal">
-                                <img src="img/portfolio/port1.jpg" alt="">
+                                <img src="img/Royal Caribbean.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal">Neleman Cava</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal">Royal Carribean</a>
                                 </h3>
                                 <span>Branding, Video</span>
                             </div>
@@ -384,14 +384,14 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.3s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat4">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal3">
-                                <img src="img/portfolio/port3.jpg" alt="">
+                                <img src="img/beyondtoxin instagram.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal3">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal3">Jeff Burger</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal3">BeyondToxin Logo</a>
                                 </h3>
                                 <span>Printing, Branding</span>
                             </div>
@@ -429,7 +429,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat1">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat3">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.5s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal4">
                                 <img src="img/portfolio/port4.jpg" alt="">
