fixed fade in animation of projects

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <!-- Modal content end -->
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                        <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal8">
                                 <img src="img/risebar.png" alt="">
                             </div>
@@ -340,7 +340,7 @@
                         <!-- Modal content end -->
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                        <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal">
                                 <img src="img/Royal Caribbean.jpg" alt="">
                             </div>
@@ -385,7 +385,7 @@
                         <!-- Modal content end -->
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                        <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal3">
                                 <img src="img/beyondtoxin instagram.jpg" alt="">
                             </div>
