--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
                         <div class="portfolio-menu mb-40 text-center">
                             <!-- <button class="active" data-filter="*">ALL</button> -->
                             <button class = "active" data-filter=".cat1">Web Apps</button>
+                            <button data-filter=".cat3">Logo Design</button>
                             <button data-filter=".cat2">Graphic Design</button>
                             <!-- <button data-filter=".cat3">Design</button> -->
-                            <button data-filter=".cat4">Logo</button>
                         </div>
                     </div>
                 </div>
                 <div class="row grid">
                    
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
+                        <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal5">
                                 <img src="img/grace-hopper1.png" alt="">
                             </div>
-                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal5">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">Grace Hopper</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal5">Grace Hopper</a>
                                 </h3>
                                 <span>An event page that helps to find professional networking events for women in tech</span>
                             </div>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                        <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/pocketcards1.png" alt="">
                             </div>
@@ -244,7 +244,7 @@
                     </div>
 
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
+                        <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
                                 <img src="img/inventory_manager.png" alt="">
                             </div>
@@ -384,10 +384,10 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal3">
-                                <img src="img/beyondtoxin instagram.jpg" alt="">
+                                <img src="img/beyondtoxin_instagram.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal3">
                                 <h3>
@@ -401,7 +401,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port3.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/beyondtoxin_instagram.jpg)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Jeff Burger</h2>
@@ -429,10 +429,10 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat3">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.5s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
+                        <div class="portfolio-wrapper mb-30" data-wow-delay="0.3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal4">
-                                <img src="img/portfolio/port4.jpg" alt="">
+                                <img src="img/hawk.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal4">
                                 <h3>
@@ -446,7 +446,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port4.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/hawk.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Delirio Tropical</h2>
@@ -475,10 +475,10 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat3">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.7s">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
+                        <div class="portfolio-wrapper mb-30" data-wow-delay="0.3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal2">
-                                <img src="img/portfolio/port2.jpg" alt="">
+                                <img src="img/honeybee.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal2">
                                 <h3>
@@ -492,7 +492,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port2.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/honeybee.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Sweet Lane</h2>
