--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
-        <link rel="shortcut icon" type="image/x-icon" href="img/b-icon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/brandon.jpg">
         <!-- Place favicon.png in the root directory -->
 
 		<!-- CSS here -->
@@ -154,7 +154,7 @@
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal5">Grace Hopper</a>
                                 </h3>
-                                <span>An event page that helps to find professional networking events for women in tech</span>
+                                <span>An event page that helps to find professional networking events for women in tech in Orange County and LA County</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -162,26 +162,29 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port5.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/grace-hopper1.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Redesign Work</h2>
+                                                <h2>Grace Hopper</h2>
 
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>This application provides information about meetup event times, location, event description and live tweets
+                                                utilizing AJAX calls to Google Maps, Flickr, Twitter, and Meetup APIs.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Audience</span>Women in Tech</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
+                                                    <span>Industry</span>Technology</li>
+                                                <!-- <li class="text-uppercase">
+                                                    <span>Services</span>Design, Art Direction, Website</li> -->
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
                                                     <a href="#">www.project.com</a>
+                                                </li>
+                                                <li class="text-uppercase">
+                                                    <span>Github</span>
+                                                    <a target="_blank" href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -209,23 +212,28 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port6.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/pocketcards1.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>PocketCards</h2>
 
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>We created Pocket Cards to solve the pain of creating flashcards online.
+                                                With user experience being the focus, we wanted to create an easy and painless way to study
+                                                for your next test or quiz.</p>
+                                            <p>Pocket Cards is constructed with a ReactJS Front-End utilizing Redux so that state can be 
+                                                accessed or changed throughout components. In conjunction with Redux, our team used React Router DOM,
+                                                Redux Form, Axios, and Materialize.</p>
+                                            <p>The Back-End features NodeJS using Express, Passport, Bcrypt-NodeJS, MySQL to handle validation,
+                                                user authentication, and storing of user data.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Audience</span>Students</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
+                                                    <span>Industry</span>Education</li>
+                                                <!-- <li class="text-uppercase">
+                                                    <span>Services</span>Design, Art Direction, Website</li> -->
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
                                                     <a target="_blank" href="http://www.mypocketcards.com">www.mypocketcards.com</a>
@@ -246,7 +254,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
-                                <img src="img/inventory_manager.png" alt="">
+                                <img src="img/inventory_cms.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal7">
                                 <h3>
@@ -260,23 +268,22 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/portfolio/port7.jpg)"></div>
+                                        <div class="project-media" style="background-image:url(img/inventory_cms.png)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Beautifully Designed</h2>
+                                                <h2>Inventory Manager</h2>
 
                                             </div>
-                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
-                                                pain was born and I will give you a complete account of the system, and expound the
-                                                actual teachings of the great explorer of the truth, the master-builder of human
-                                                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.</p>
+                                            <p>A CMS created in PHP allowing to manage products in inventory using CRUD operations
+                                                within MySQL and designed using an HTML 5, CSS 3 and Bootstrap front end.
+                                            </p>
                                             <ul class="project-info-list">
                                                 <li class="text-uppercase">
-                                                    <span>Client</span>Jon Morikas</li>
+                                                    <span>Audience</span>Ecommerce Companies</li>
                                                 <li class="text-uppercase">
-                                                    <span>Industry</span>Adventure / Travel</li>
-                                                <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li>
+                                                    <span>Industry</span>Ecommerce</li>
+                                                <!-- <li class="text-uppercase">
+                                                    <span>Services</span>Design, Art Direction, Website</li> -->
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
                                                     <a target="_blank" href="/inventory-manager-cms">www.brandontravispark.com/inventory-manager-cms</a>
@@ -296,13 +303,13 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal8">
-                                <img src="img/risebar.png" alt="">
+                                <img src="img/rise.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal8">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal8">Rise Bar</a>
                                 </h3>
-                                <span>Fashion, Web</span>
+                                <span>Marketing, Branding, Nutrition</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -342,13 +349,13 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal">
-                                <img src="img/Royal Caribbean.jpg" alt="">
+                                <img src="img/royal.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal">Royal Carribean</a>
                                 </h3>
-                                <span>Branding, Video</span>
+                                <span>Marketing, Branding</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -393,7 +400,7 @@
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal3">BeyondToxin Logo</a>
                                 </h3>
-                                <span>Printing, Branding</span>
+                                <span>Twitch Streamer, Youtuber</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -436,9 +443,9 @@
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal4">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal4">Delirio Tropical</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal4">Hawk Mascot</a>
                                 </h3>
-                                <span>Buildings, Office</span>
+                                <span>eSports Mascot</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -482,9 +489,9 @@
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal2">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal2">Sweet Lane</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal2">Honeybee Logo</a>
                                 </h3>
-                                <span>Graphic, Printing</span>
+                                <span>Twitch Streamer, Youtuber</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -769,9 +776,9 @@
                                 <h6>
                                     <span>Mail</span>: brandonpark206@gmail.com</h6>
                                 <h6>
-                                    <span>Phone</span>: +123456789</h6>
+                                    <span>Phone</span>:714-746-1003</h6>
                             </div>
-                            <a href="#contact" class="btn smoth-scroll">Message Me</a>
+                            <a href="Brandon Resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -1120,7 +1127,6 @@
                     <div class="col-xl-5 col-lg-5">
                         <div class="area-title mb-40">
                             <h2 class="mb-15">Contact Info</h2>
-                            <p>Lorem ipsum dolor sit amet, consecte adipisicing elit sed do eiusmod tempor incididunt.</p>
                         </div>
                         <div class="contact-info mb-50 wow fadeInRight" data-wow-delay=".3s">
                             <ul>
@@ -1139,7 +1145,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <h5>Contact Me</h5>
-                                        <span>+0123456789</span>
+                                        <span>714-746-1003</span>
                                     </div>
                                 </li>
                                 <li>
@@ -1148,7 +1154,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <h5>Email Me</h5>
-                                        <span>support@gmail.com</span>
+                                        <span>brandonpark206@gmail.com</span>
                                     </div>
                                 </li>
                             </ul>
