adding gradient borders to projects

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                    
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal5">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal5">
                                 <img src="img/grace-hopper1.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal5">
@@ -197,7 +197,7 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/pocketcards1.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
@@ -253,7 +253,7 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal7">
                                 <img src="img/inventory_cms.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal7">
@@ -302,7 +302,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal8">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal8">
                                 <img src="img/rise.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal8">
@@ -347,7 +347,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal">
                                 <img src="img/royal.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal">
@@ -386,7 +386,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
                         <div class="portfolio-wrapper mb-30 " data-wow-delay=".3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal3">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal3">
                                 <img src="img/beyondtoxin_instagram.jpg" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal3">
@@ -424,7 +424,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
                         <div class="portfolio-wrapper mb-30" data-wow-delay="0.3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal4">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal4">
                                 <img src="img/hawk.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal4">
@@ -461,7 +461,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3">
                         <div class="portfolio-wrapper mb-30" data-wow-delay="0.3s">
-                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal2">
+                            <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal2">
                                 <img src="img/honeybee.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal2">
