changing border gradient to portfolio theme and adding full image click

--- a/index.html
+++ b/index.html
@@ -331,12 +331,10 @@
                                                     <span>Audience</span>Rise Bar Customers</li>
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>Nutrition</li>
-                                                <!-- <li class="text-uppercase">
-                                                    <span>Services</span>Design, Art Direction, Website</li> -->
-                                                <!-- <li class="text-uppercase">
-                                                    <span>Website</span>
-                                                    <a href="#">www.project.com</a>
-                                                </li> -->
+                                                <li class="text-uppercase">
+                                                    <span>Full Image</span>
+                                                    <a target = "_blank" href="img/rise.png">rise bar</a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -376,6 +374,10 @@
                                                     <span>Audience</span>Royal Caribbean Customers</li>
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>Cruise Lines</li>
+                                                <li class="text-uppercase">
+                                                    <span>Full Image</span>
+                                                    <a target = "_blank" href="img/royal.jpg">royal caribbean flyer</a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -414,6 +416,10 @@
                                                     <span>Client</span>BeyondToxin</li>
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>eSports</li>
+                                                <li class="text-uppercase">
+                                                    <span>Full Image</span>
+                                                    <a target = "_blank" href="img/beyondtoxin_instagram.jpg">beyondtoxin</a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -451,6 +457,10 @@
                                                     <span>Client</span>Up For Sale</li>
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>eSports</li>
+                                                <li class="text-uppercase">
+                                                    <span>Full Image</span>
+                                                    <a target = "_blank" href="img/hawk.png">hawk</a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -489,6 +499,10 @@
                                                     <span>Client</span>HoneyBee</li>
                                                 <li class="text-uppercase">
                                                     <span>Industry</span>eSports</li>
+                                                <li class="text-uppercase">
+                                                    <span>Full Image</span>
+                                                    <a target = "_blank" href="img/honeybee.png">honeybee</a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
