changed to work in progess

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                                     <span>Services</span>Design, Art Direction, Website</li> -->
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="#">www.project.com</a>
+                                                    <a href="#">Under Construction: Work in Progress</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
