--- a/index.html
+++ b/index.html
@@ -1088,19 +1088,19 @@
                             <h2 class="mb-15">Get In Touch</h2>
                         </div>
                         <div class="contact-form mb-50 wow fadeInLeft" data-wow-delay=".3s">
-                            <form id="contact-form" action="mail.php" method="POST">
+                            <form id="contact-form" action="mail_handler.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input name="name" type="text" placeholder="Your Name :">
+                                        <input name="name" type="text" placeholder="Your Name :" value = "brandon">
                                     </div>
                                     <div class="col-md-6">
-                                        <input name="email" type="email" placeholder="Email :">
+                                        <input name="email" type="email" placeholder="Email :" value = "brandondoubleo7@gmail.com">
                                     </div>
                                     <div class="col-md-12">
-                                        <input name="subject" type="email" placeholder="Subject :">
+                                        <input name="subject" type="text" placeholder="Subject :" value = "first test message">
                                     </div>
                                     <div class="col-md-12">
-                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :"></textarea>
+                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :">brandon was here</textarea>
                                         <button class="btn" type="submit">Send Message</button>
                                     </div>
                                 </div>
