clearing values in mail fields

--- a/index.html
+++ b/index.html
@@ -1091,16 +1091,16 @@
                             <form id="contact-form" action="mail_handler.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input name="name" type="text" placeholder="Your Name :" value = "brandon">
+                                        <input name="name" type="text" placeholder="Your Name :">
                                     </div>
                                     <div class="col-md-6">
-                                        <input name="email" type="email" placeholder="Email :" value = "brandondoubleo7@gmail.com">
+                                        <input name="email" type="email" placeholder="Email :">
                                     </div>
                                     <div class="col-md-12">
-                                        <input name="subject" type="text" placeholder="Subject :" value = "first test message">
+                                        <input name="subject" type="text" placeholder="Subject :">
                                     </div>
                                     <div class="col-md-12">
-                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :">brandon was here</textarea>
+                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :"></textarea>
                                         <button class="btn" type="submit">Send Message</button>
                                     </div>
                                 </div>
