changed grace hopper project photo

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1">
                         <div class="portfolio-wrapper mb-30" data-wow-delay=".3s">
                             <div class="portfolio-thumb module-border-wrap" data-toggle="modal" data-target="#popup-modal5">
-                                <img src="img/grace-hopper1.png" alt="">
+                                <img src="img/grace-hopper.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal5">
                                 <h3>
