--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
                                                     <span>Industry</span>Technology</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="#">Under Construction: Work in Progress</a>
+                                                    <a href="/grace-hopper">www.brandontravispark.com/grace-hopper/</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
-                                                    <a target="_blank" href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
+                                                    <a target="_blank" href="https://github.com/brandon206/women-in-tech-meetup-finder">https://github.com/brandon206/women-in-tech-meetup-finder</a>
                                                 </li>
                                             </ul>
                                         </div>
