links open new new tab

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                                     <span>Industry</span>Technology</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="/grace-hopper">www.brandontravispark.com/grace-hopper/</a>
+                                                    <a target="_blank" href="/grace-hopper">www.brandontravispark.com/grace-hopper/</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
