adding gifs to demo projects

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/grace-hopper1.png)"></div>
+                                            <img class = "project-media" src="./video/grace-hopper_demo.gif" alt="grace Hopper demo">
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Grace Hopper</h2>
@@ -201,7 +201,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/pocketcards1.png)"></div>
+                                        <img class = "project-media" src="./video/pocketcards_demo.gif" alt="pocketcards demo">
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>PocketCards</h2>
@@ -255,8 +255,8 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <div class="project-media" style="background-image:url(img/inventory_cms.png)"></div>
-                                        <div class="view-project-content pt-10">
+                                            <img class = "project-media" src="./video/inventory-manager_demo.gif" alt="inventory-manager demo">
+                                            <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Inventory Manager</h2>
 
