conversion of gifs to mp4s

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                            <img class = "project-media" src="./video/grace-hopper_demo.gif" alt="grace Hopper demo">
+                                        <video class = "project-media" controls autoplay="autoplay">
+                                            <source src="./video/grace-hopper_demo.mp4" type="video/mp4">
+                                        </video>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Grace Hopper</h2>
@@ -201,7 +203,9 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <img class = "project-media" src="./video/pocketcards_demo.gif" alt="pocketcards demo">
+                                            <video class = "project-media" controls autoplay="autoplay">
+                                                <source src="./video/pocketcards_demo.mp4" type="video/mp4">
+                                            </video>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>PocketCards</h2>
@@ -255,8 +259,10 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                            <img class = "project-media" src="./video/inventory-manager_demo.gif" alt="inventory-manager demo">
-                                            <div class="view-project-content pt-10">
+                                        <video class = "project-media" controls autoplay="autoplay">
+                                            <source src="./video/inventory-manager_demo.mp4" type="video/mp4">
+                                        </video>
+                                        <div class="view-project-content pt-10">
                                             <div class="modal-title">
                                                 <h2>Inventory Manager</h2>
 
