videos now autoplay on document load

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <video class = "project-media" controls autoplay="autoplay">
+                                        <video class = "project-media" controls autoplay muted>
                                             <source src="./video/grace-hopper_demo.mp4" type="video/mp4">
                                         </video>
                                         <div class="view-project-content pt-10">
@@ -203,7 +203,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                            <video class = "project-media" controls autoplay="autoplay">
+                                            <video class = "project-media" controls autoplay muted>
                                                 <source src="./video/pocketcards_demo.mp4" type="video/mp4">
                                             </video>
                                         <div class="view-project-content pt-10">
@@ -259,7 +259,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="view-project">
-                                        <video class = "project-media" controls autoplay="autoplay">
+                                        <video class = "project-media" controls autoplay muted>
                                             <source src="./video/inventory-manager_demo.mp4" type="video/mp4">
                                         </video>
                                         <div class="view-project-content pt-10">
