--- a/index.html
+++ b/index.html
@@ -698,16 +698,16 @@
                             <form id="contact-form" action="mail_handler.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input name="name" type="text" placeholder="Your Name :">
+                                        <input name="name" type="text" placeholder="Your Name :" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <input name="email" type="email" placeholder="Email :">
+                                        <input name="email" type="email" placeholder="Email :" required>
                                     </div>
                                     <div class="col-md-12">
-                                        <input name="subject" type="text" placeholder="Subject :">
+                                        <input name="subject" type="text" placeholder="Subject :" required>
                                     </div>
                                     <div class="col-md-12">
-                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :"></textarea>
+                                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :" required></textarea>
                                         <button class="btn" type="submit">Send Message</button>
                                     </div>
                                 </div>
