--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             <h2 class="mb-15">Get In Touch</h2>
                         </div>
                         <div class="contact-form mb-50 wow fadeInLeft" data-wow-delay=".3s">
-                            <form id="contact-form" action="mail_handler.php" method="POST">
+                            <form id="contact-form" name = 'contact-form' action="mail_handler.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <input name="name" type="text" placeholder="Your Name :" required>
@@ -713,6 +713,7 @@
                                 </div>
                             </form>
                             <p class="ajax-response"></p>
+                            <p id = "validationAlert"></p>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
