disable send message button if not valid

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message :"></textarea>
-                                        <button class="btn" type="submit">Send Message</button>
+                                        <button class="btn submit-button" type="submit">Send Message</button>
                                     </div>
                                 </div>
                             </form>
