--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             <h2 class="mb-15">Get In Touch</h2>
                         </div>
                         <div class="contact-form mb-50 wow fadeInLeft" data-wow-delay=".3s">
-                            <form id="contact-form" name = 'contact-form' action="mail_handler.php" method="POST">
+                            <form id="contact-form" name = 'contact-form' action="wames.php" method="POST">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <input name="name" type="text" placeholder="Your Name :" required>
