changing github repo name

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
-                                                    <a target="_blank" href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
+                                                    <a target="_blank" href="https://github.com/Tkim43/pocket-cards">https://github.com/pocket-cards</a>
                                                 </li>
                                             </ul>
                                         </div>
