added updated resume to links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                                 <a class="nav-link" href="#contact">Contact</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="brandon_park_resume.pdf" target="_blank">Resume</a>
+                                                <a class="nav-link" href="brandon_p_resume.pdf" target="_blank">Resume</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -110,7 +110,7 @@
                                         <b>Designer</b>
                                     </span>
                                 </h4>
-                                <a href="brandon_park_resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
+                                <a href="brandon_p_resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                             </div>
                         </div>
                     </div>
@@ -683,7 +683,7 @@
                                     <span>Phone</span>: <a href="tel:+1-949-329-5625">949-329-5625</a>
                                 </h6>
                             </div>
-                            <a href="brandon_park_resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
+                            <a href="brandon_p_resume.pdf" target="_blank" class="btn smoth-scroll">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -773,7 +773,7 @@
                                     <a target="_blank" href="https://www.linkedin.com/in/brandonpark206/"><i class="ti-linkedin"></i></a>
                                     <a target="_blank" href="https://github.com/brandon206"><i class="ti-github"></i></a>
                                     <a target="_blank" href="https://www.instagram.com/designtrav/"><i class="ti-instagram"></i></a>
-                                    <a target="_blank" href="brandon_park_resume.pdf"><i class="ti-file"></i></a>
+                                    <a target="_blank" href="brandon_p_resume.pdf"><i class="ti-file"></i></a>
                                 </div>
                                 <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
